[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resources/textures/stage1_new_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Player/sfx.gd" type="Script" id=2]
[ext_resource path="res://Player/frontclouds.gd" type="Script" id=3]
[ext_resource path="res://Player/backclouds.gd" type="Script" id=4]
[ext_resource path="res://Player/TileDrawer.gd" type="Script" id=5]
[ext_resource path="res://Resources/music/StumpAndJumpStage1.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/sfx/SFXtile5.ogg" type="AudioStream" id=7]
[ext_resource path="res://Resources/sfx/SFXtile1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Resources/sfx/SFXtile4.ogg" type="AudioStream" id=9]
[ext_resource path="res://Resources/sfx/SFXtile2.ogg" type="AudioStream" id=10]
[ext_resource path="res://Resources/textures/backgrounds/stage1backstill.png" type="Texture" id=11]
[ext_resource path="res://Resources/textures/backgrounds/stage1sky.png" type="Texture" id=12]
[ext_resource path="res://Resources/sfx/SFXtile3.ogg" type="AudioStream" id=13]
[ext_resource path="res://Resources/textures/backgrounds/finalfrontclouds.png" type="Texture" id=14]
[ext_resource path="res://SinglePlayerWorld/MusicPlayer.gd" type="Script" id=15]
[ext_resource path="res://SinglePlayerWorld/World.gd" type="Script" id=16]

[node name="World" type="Node2D"]
script = ExtResource( 16 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.15, 0.2 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
position = Vector2( 0, -664 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 12 )

[node name="backclouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.15, 0.3 )
motion_mirroring = Vector2( 2550, 0 )
script = ExtResource( 4 )
CLOUD_SPEED = -10.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/backclouds"]
position = Vector2( 2.84217e-14, -1272 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 11 )

[node name="frontclouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.15, 0.35 )
motion_mirroring = Vector2( 8224, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/frontclouds"]
position = Vector2( 2752, -1920 )
scale = Vector2( 2, 2.2 )
texture = ExtResource( 14 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 1.5 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 24 )
cell_custom_transform = Transform2D( 64, 0, 0, 8, 0, 0 )
cell_tile_origin = 1
collision_use_kinematic = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 4, 2, -65535, 4, 1, -65534, 4, 0, -65533, 4, 2, -65532, 4, 0, -65531, 4, 0, -65530, 4, 3 )
script = ExtResource( 5 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
script = ExtResource( 15 )

[node name="sfx" type="Node2D" parent="."]
scale = Vector2( 2, 1.5 )
script = ExtResource( 2 )

[node name="bloop1" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="bloop2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="bloop3" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="bloop4" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="bloop5" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="missed_next_tile" from="TileMap" to="." method="_on_TileMap_missed_next_tile"]
[connection signal="orient_player" from="TileMap" to="." method="_on_TileMap_orient_player"]
[connection signal="update_counter" from="TileMap" to="." method="_on_TileMap_update_counter"]
